chores: Cập nhật lại quyền sử dụng setting
