# docs/swagger.json
@@ -3474,11 +3474,6 @@
         },
         "/settings": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "API lấy ra tất cả cấu hình",
                 "consumes": [
                     "application/json"
@@ -3514,11 +3509,6 @@
         },
         "/settings/{settingKey}": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "API lấy ra cấu hình theo key",
                 "consumes": [
                     "application/json"
